Add RubyInstaller-2.4.1-2 downloads and publish release post.

--- a/_data/downloads.yaml
+++ b/_data/downloads.yaml
@@ -1,19 +1,33 @@
 ---
 - filetype: rubyinstaller7z
+  href: https://github.com/oneclick/rubyinstaller2/releases/download/2.4.1-2/rubyinstaller-2.4.1-2-x64.7z
+  name: Ruby 2.4.1-2 (x64)
+  show: true
+- filetype: rubyinstallerexe
+  href: https://github.com/oneclick/rubyinstaller2/releases/download/2.4.1-2/rubyinstaller-2.4.1-2-x64.exe
+  name: Ruby 2.4.1-2 (x64)
+  show: true
+- filetype: rubyinstaller7z
+  href: https://github.com/oneclick/rubyinstaller2/releases/download/2.4.1-2/rubyinstaller-2.4.1-2-x86.7z
+  name: Ruby 2.4.1-2 (x86)
+  show: true
+- filetype: rubyinstallerexe
+  href: https://github.com/oneclick/rubyinstaller2/releases/download/2.4.1-2/rubyinstaller-2.4.1-2-x86.exe
+  name: Ruby 2.4.1-2 (x86)
+  show: true
+
+- filetype: rubyinstaller7z
   href: https://github.com/oneclick/rubyinstaller2/releases/download/2.4.1-1/rubyinstaller-2.4.1-1-x64.7z
   name: Ruby 2.4.1-1 (x64)
   show: true
-
 - filetype: rubyinstallerexe
   href: https://github.com/oneclick/rubyinstaller2/releases/download/2.4.1-1/rubyinstaller-2.4.1-1-x64.exe
   name: Ruby 2.4.1-1 (x64)
   show: true
-
 - filetype: rubyinstaller7z
   href: https://github.com/oneclick/rubyinstaller2/releases/download/2.4.1-1/rubyinstaller-2.4.1-1-x86.7z
   name: Ruby 2.4.1-1 (x86)
   show: true
-
 - filetype: rubyinstallerexe
   href: https://github.com/oneclick/rubyinstaller2/releases/download/2.4.1-1/rubyinstaller-2.4.1-1-x86.exe
   name: Ruby 2.4.1-1 (x86)
