--- a/_data/downloads.yaml
+++ b/_data/downloads.yaml
@@ -19,19 +19,19 @@
 - filetype: rubyinstaller7z
   href: https://github.com/oneclick/rubyinstaller2/releases/download/2.4.1-1/rubyinstaller-2.4.1-1-x64.7z
   name: Ruby 2.4.1-1 (x64)
-  show: true
+  show: false
 - filetype: rubyinstallerexe
   href: https://github.com/oneclick/rubyinstaller2/releases/download/2.4.1-1/rubyinstaller-2.4.1-1-x64.exe
   name: Ruby 2.4.1-1 (x64)
-  show: true
+  show: false
 - filetype: rubyinstaller7z
   href: https://github.com/oneclick/rubyinstaller2/releases/download/2.4.1-1/rubyinstaller-2.4.1-1-x86.7z
   name: Ruby 2.4.1-1 (x86)
-  show: true
+  show: false
 - filetype: rubyinstallerexe
   href: https://github.com/oneclick/rubyinstaller2/releases/download/2.4.1-1/rubyinstaller-2.4.1-1-x86.exe
   name: Ruby 2.4.1-1 (x86)
-  show: true
+  show: false
 
 - filetype: rubyinstallerexe
   href: https://dl.bintray.com/oneclick/rubyinstaller/rubyinstaller-2.3.3.exe
